--- a/index.html
+++ b/index.html
@@ -429,6 +429,12 @@
 
     <div class="exp-body">
       <div class="exp-body-inner">
+<h3>Role Overview</h3>
+<p>
+  Worked as a Data Analyst at NIQ, supporting enterprise stakeholders across
+  supply chain, finance, and operations by delivering scalable Power BI
+  reporting solutions and reliable business insights.
+</p>
 
         <h3>Situation</h3>
         <p>
@@ -479,6 +485,12 @@
           <li>Improved KPI consistency across multiple business teams.</li>
           <li>Enabled self-service analytics and faster decision-making.</li>
         </ul>
+        <h3>Tools Used</h3>
+<p>
+  Power BI (Desktop & Service), SQL Server, Snowflake, Power Query, Onelake, ETL, Data Modelling
+  DAX, REST APIs, Excel
+</p>
+
 
       </div>
     </div>
@@ -545,12 +557,11 @@
             model.
           </li>
         </ul>
+<h3>Tools Used</h3>
+<p>
+  Advanced Excel, ORACLE(DB), SAP(DB), Power Query, Pivot Tables, VBA, Macros 
+</p>
 
-        <h3>Achievement</h3>
-        <p>
-          Awarded <strong>Youngest Manager Award</strong> for driving measurable
-          business improvement using data-driven decision-making.
-        </p>
 
       </div>
     </div>
