--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
       <h1>Hi, I'm Lakshmi Teja Kumar</h1>
       <h2>Data Analyst & Power BI Developer</h2>
       <p>
-        Enterprise Data Analyst with 4 years of professional experience delivering
+        Enterprise Data Analyst with 3.8 years of professional experience delivering
         scalable business intelligence solutions, KPI-driven dashboards, and
         data-backed insights. Known for bridging the gap between business needs
         and analytical solutions through strong stakeholder collaboration and
@@ -374,7 +374,7 @@
     <section id="about" class="page">
       <h1>About Me</h1>
       <p>
-        I am a data professional with 4 years of hands-on experience, most recently
+        I am a data professional with 3.8 years of hands-on experience, most recently
         working as a Data Analyst (Power BI Developer) at NIQ, a global market
         research organization with over a century of industry presence.
       </p>
@@ -508,6 +508,12 @@
 
     <div class="exp-body">
       <div class="exp-body-inner">
+<h3>Role Overview</h3>
+<p>
+  Worked as a Marketing & Regional Manager at MORE Retail, responsible for
+  overseeing store-level sales performance, inventory planning, and marketing
+  initiatives, with a strong focus on data-driven decision-making.
+</p>
 
         <h3>Situation</h3>
         <p>
